syntax = "proto3";

package helloworld.v1;

import "validate/validate.proto";

option go_package = "github.com/bionicotaku/kratos-template/api/helloworld/v1;v1";
option java_multiple_files = true;
option java_package = "dev.kratos.api.helloworld.v1";
option java_outer_classname = "HelloworldProtoV1";

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1 [(validate.rules).string = {min_len: 1, max_len: 64}];
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}
